<resources>
    <string name="app_name">Attendance</string>
    <string name="title_activity_currentsesstions">currentsesstions</string>
    <string name="title_activity_currentsesstion">currentsesstion</string>
    <string name="register_students">Register students</string>
    <string name="register_tutors">Register tutors</string>
    <string name="register_holes">Register holes</string>
    <string name="import_students_from_excel_file">Import students from excel file</string>
    <string name="edit_students_data">Edit students data</string>
    <string name="import_excel">import excel</string>
    <string name="add_tutor">Add tutor</string>
    <string name="edit_tutor">Edit tutor</string>
    <string name="enter_tutor_email">Enter tutor email</string>
    <string name="enter_tutor_name">Enter tutor name</string>
    <string name="eneter_password">Eneter password</string>
    <string name="tutor_department">tutor Department</string>
    <string name="add_hole">Add hole</string>
    <string name="hole_name">hole name</string>
    <string name="enter_hole_longitude">Enter hole longitude</string>
    <string name="enter_hole_latitude">Enter hole latitude</string>
    <string name="enter_hole_type">Enter hole type</string>
    <string name="enter_admin_name">Enter admin name</string>
    <string name="enter_admin_email">Enter admin email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="add">Add</string>
    <string name="enter_tutor_new_email">enter tutor new email</string>
    <string name="tutor_new_name">tutor new name</string>
    <string name="update">update</string>
    <string name="get_location">get Location</string>
    <string name="enter_student_new_email">enter student new email</string>
    <string name="enter_student_new_password">enter student new password</string>
</resources>
