<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorGround"
tools:context="com.work.unknown.absence.Admin.AddAdminActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="20dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/admin_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_background"
        android:hint="@string/enter_admin_name"
        android:padding="10dp" />

    <EditText
        android:id="@+id/admin_email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_background"
        android:hint="@string/enter_admin_email"
        android:padding="10dp" />

    <EditText
        android:id="@+id/admin_repassword_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_background"
        android:hint="Enter admin password "
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/admin_repeatPassword_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_background"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:padding="10dp" />


    <Button
        android:id="@+id/add_admin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/logininter"
        android:text="@string/add" />

</LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardElevation="10dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="2nd Olympics of computers and Information Sciences,Mansoura University,2018"
            android:textColor="#000"
            android:textSize="15sp"

            />

    </android.support.v7.widget.CardView>


</RelativeLayout>
