<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ad"
    tools:context="com.work.unknown.absence.Admin.tasksactivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/admin"
        android:layout_margin="10dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        >


        <Button
            android:id="@+id/register_student_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/logininter"
            android:text="@string/register_students" />

        <Button
            android:id="@+id/register_tutors_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_student_btn"
            android:layout_margin="10dp"
            android:background="@drawable/logininter"
            android:text="@string/register_tutors" />

        <Button
            android:id="@+id/register_holes_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_tutors_btn"
            android:layout_margin="10dp"
            android:background="@drawable/logininter"
            android:text="@string/register_holes" />

        <Button
            android:id="@+id/add_admin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_holes_btn"
            android:layout_margin="10dp"
            android:background="@drawable/logininter"
            android:text="Add admin" />



    </LinearLayout>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardElevation="10dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="2nd Olympics of computers and Information Sciences,Mansoura University,2018"
            android:textColor="#000"
            android:textSize="15sp"

            />

    </android.support.v7.widget.CardView>
</RelativeLayout>

